css fix for reshared-content images and whitespace

--- a/view/theme/redbasic/css/style.css
+++ b/view/theme/redbasic/css/style.css
@@ -856,15 +856,26 @@ div.jGrowl div.jGrowl-notification {
 .contact-block-content {
 	margin-top: 10px;
 }
-.contact-block-img.archived, .app-deleted, .dim {
+.contact-block-img.archived,
+.app-deleted,
+.dim {
 	opacity: 0.3;
 	filter:alpha(opacity=30);
 }
 
 
-.profile-match-connect { margin-top: 5px; }
+.profile-match-connect {
+	margin-top: 5px;
+}
 
-.reshared-content { margin-left: 20px; }
+.reshared-content {
+	margin-left: 20px;
+}
+
+.reshared-content img {
+	width: 100%;
+}
+
 .shared_header img {
 	border-radius: $radius;
 	margin-right: 10px;
